--- a/styles.css
+++ b/styles.css
@@ -47,3 +47,40 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+nav {
+  width: 100%;
+	height: 50px;
+	background-color: #1b1b32;
+	display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  top: 0;
+}
+nav > ul {
+  display: flex;
+	justify-content: space-evenly;
+  flex-wrap: wrap;
+	align-items: center;
+	padding-inline-start: 0;
+	margin-block: 0;
+	height: 100%;
+}
+
+nav > ul > li {
+  color: #dfdfe2;
+  margin: 0 0.5rem;
+	padding: 0.5rem;
+	display: block;
+}
+
+nav > ul > li:hover {
+  background-color: #dfdfe2;
+  color: #1b1b32;
+  cursor: pointer;
+}
+
+li > a {
+  color: inherit;
+  text-decoration: none;
+}
