--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,10 @@ li > a {
   text-decoration: none;
 }
 
+#nav-placeholder {
+  width: 100%;
+}
+
 #back-image {
   height: 20px;
   position: absolute;
@@ -101,7 +105,7 @@ li > a {
 #userdata {
   position: absolute;
   left: 10%;
-  top: 20%;
+  top: 25%;
   width: 80%;
   text-align: center;
 }
