--- a/dragNdrop.css
+++ b/dragNdrop.css
@@ -16,7 +16,9 @@ body{
 }
 .drag-area{
   border: 2px dashed #fff;
-  height: 500px;
+  margin-left: 60vh;
+  margin-top: 10vh;
+  height: 400px;
   width: 700px;
   border-radius: 5px;
   display: flex;
@@ -150,5 +152,26 @@ nav > ul > li:hover {
 
 li > a {
   color: inherit;
+  text-decoration: none;
+}
+.submitBtn{
+  margin: 10vh;
+  padding: 2vh 5vh;
+  border: none;
+  background-color: grey;
+  color: white;
+  font-weight: 600;
+  border-radius: 20px;
+
+}
+.submitBtn:hover{
+  background-color: black;
+  color: white;
+  font-weight: 600;
+}
+.fileName{
+  padding: 1vh;
+  border-radius: 10px;
+  border: none;
   text-decoration: none;
 }
